# living-power

./: .gitignore  Cargo.toml  README.md  flake.nix  happ.nix  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-nix-app.yaml  release-tauri-app.yaml  site.yaml  test.yaml
assets/: index-01db1ec0.js  index-223b6e40.css  index-29cfc62c.js  index-2a0d1004.js  index-550e721e.js  index-9441823e.js  index-aae2f0ae.js  index-ec2939f0.css  index-f1951a65.js
bpv/: bpv.ino
dnas/living_power/: dna.nix
dnas/living_power/workdir/: dna.yaml
dnas/living_power/zomes/coordinator/living_power/: Cargo.toml  zome.nix
dnas/living_power/zomes/coordinator/living_power/src/: all_bpv_devices.rs  bpv_device.rs  external_resistors.rs  lib.rs  measure_collection.rs  measurement_collection.rs
dnas/living_power/zomes/coordinator/living_power/tests/: all_bpv_devices.rs  bpv_device.rs  measure_collection.rs  measurement_collection.rs
dnas/living_power/zomes/coordinator/living_power/tests/common/: mod.rs
dnas/living_power/zomes/integrity/living_power/: Cargo.toml  zome.nix
dnas/living_power/zomes/integrity/living_power/src/: all_bpv_devices.rs  bpv_device.rs  bpv_device_info.rs  external_resistors.rs  lib.rs  measure_collection.rs  measurement_collection.rs
site/: index.html  package.json  style.css  vite.config.ts
site/src/: download-installer-button.ts
src-tauri/: Cargo.toml  build.rs  entitlements.plist  relic.conf  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: arduino.rs  collect_measurements.rs  lib.rs  macos.rs  sdcards.rs
tests/: package.json  tsconfig.json
tests/src/: app-path.ts  migration.test.ts
tests/src/living_power/living_power/: all-bpv-devices.test.ts  bpv-device.test.ts  measure-collection.test.ts  measurement-collection.test.ts  setup.ts
ui/: index.html  package.json  vite.config.ts
ui/src/: app-styles.ts  automatic-update-dialog.ts  chartjs-chart.ts  context.ts  holochain-app.ts  home-page.ts  utils.ts
ui/src/arduinos/: collect-measurements.ts  connected-arduinos.ts  measurements-sdcards.ts
ui/src/living_power/living-power/: context.ts  living-power-client.ts  living-power-store.ts  mocks.ts  types.ts
ui/src/living_power/living-power/elements/: all-bpv-devices.ts  bpv-device-detail.ts  bpv-device-summary.ts  create-measure-collection.ts  edit-bpv-device.ts  measure-collection-detail.ts  measure-collection-summary.ts  measure-collections-for-bpv-device.ts
ui/src/living_power/living_power/: context.ts  living-power-client.ts  living-power-store.ts  mocks.ts  types.ts
ui/src/living_power/living_power/elements/: all-bpv-devices.ts  bpv-device-detail.ts  bpv-device-measurements.ts  bpv-device-summary.ts  bpv-device.ts  collect-measurements-alert.ts  create-bpv-device.ts  create-measurement-collection.ts  edit-bpv-device.ts  enter-new-resistors-values-dialog.ts  external-resistors-values-form.ts  external-resistors-values.ts  measurement-collection-detail.ts  measurement-collection-summary.ts  measurement-collections-for-bpv-device.ts  new-arduino-connected-alert.ts  new-bpv-device-connected-dialog.ts  synchronize-data-button.ts
workdir/: happ.yaml  web-happ.yaml
