[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "src-tauri"]
resolver = "2"

[workspace.dependencies]
hdi = "0.5.0-dev"
hdk = "0.4.0-dev"
serde = "1.0"

[workspace.dependencies.living_power]
path = "dnas/living_power/zomes/coordinator/living_power"

[workspace.dependencies.living_power_integrity]
path = "dnas/living_power/zomes/integrity/living_power"

[patch.crates-io]
holochain_client = { git ="https://github.com/holochain/holochain-client-rust",branch="develop" }
