[package]
name = "living-power"
version = "0.1.1"
description = "Living Power"
authors = ["guillem@darksoil.studio"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", default-features = false , features = [] }

[dependencies]
serde = "1"
serde_json = "1"
regex = "1"
chrono = "0.4"
once_cell = "1"
log = "0.4"
url2 = "0.0.6"
app_dirs2 = "2.5.5"
tempdir = "0.3.7"
anyhow = "1"
opener = { version = "0.7", features = ["reveal"] }

tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-holochain = { git = "https://github.com/darksoil-studio/p2p-shipyard", branch = "next" }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-process = "2.0.0-rc.1"

holochain_client = { version = "0.6.0-dev" }
holochain_types = { version = "0.4.0-dev" }
holochain_conductor_api = { version = "0.4.0-dev" }
lair_keystore = { version = "0.5.1" }

mountpoints = "0.2"
serialport = { version = "4.3", features = ["serde"] }

living_power_integrity = { path = "../dnas/living_power/zomes/integrity/living_power" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-rc"
